Fix view content getting cut off on right from left drawer margin

--- a/app/styles/_components.view.scss
+++ b/app/styles/_components.view.scss
@@ -4,7 +4,6 @@
   margin-top: 50px;
   overflow: auto;
   height: 100%;
-  width: 100%;
 }
 
 @include mq($from: md) {
